181 - sdk improvements (#11)
* update API

* regen go

* fix generated Go SDKs

* rm unused import

* update API versions

* regen novellia

* last was API, now regen Go for Novellia

* fix go sdk

* forgot nvla specific regen instructions

* regen Go and TS

* TS SDK WIP
